[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sum_array_markbassem"
version = "0.0.1"
authors = [
  { name="Mark Bassem", email="mark.bassem@apexmedical.ai" },
]
description = "A small sum array package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",             # Example of a dependency without version specification
]


[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"